Change Maturity to fluency

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
         <meta name="author" content="Gary A. Stafford (https://github.com/garystafford)">
-        <meta name="description" content="Gap analysis visualization tool for the Continuous Delivery Maturity Model">
+        <meta name="description" content="Visualization tool for the Continuous Delivery Fluency Model">
         <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
         <link rel="stylesheet" type="text/css" href="css/radar.css"/>
-        <title>Continuous Delivery Maturity Model</title>
+        <title>Continuous Delivery Fluency Model</title>
     </head>
     <body>
         <div id="body">
